Fix batch edit checkbox clipping on Safari.

--- a/admin/themes/default/css/sass/pages/_items.scss
+++ b/admin/themes/default/css/sass/pages/_items.scss
@@ -38,6 +38,11 @@
         background-position-y: 2px;
     }
 
+.browse .batch-edit-heading input,
+.browse .batch-edit-check input {
+    transform: translate(0px);
+}
+
 .items.browse .input-block {
     overflow: auto;
     margin: 0 0 20px 0;
